--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE HTML> 
 
 <header>
+Mihika Rayan
+</header>
 
 <title>
 GirlsWhoCode
 </title>
+
 <img scr=
 "http://jeanphilippedescamps.fr/mallpaper/ios/ipad/9385-ipad.jpg"
 
-</header>
+
 
 <body>
-
+Hey people! This is just a general website about my life and what's going on so... enjoy! (hopefully)
 
 </body>
