--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ Mihika Rayan
 GirlsWhoCode
 </title>
 
-<img scr=
-"http://jeanphilippedescamps.fr/mallpaper/ios/ipad/9385-ipad.jpg"/>
+<img scr="http://jeanphilippedescamps.fr/mallpaper/ios/ipad/9385-ipad.jpg"/>
 
 <body>
 Hey people! This is just a general website about my life and what's going on so... enjoy! (hopefully)
@@ -24,4 +23,3 @@ Hey people! This is just a general website about my life and what's going on so.
  <h4>
    Photo Edits
  </h4>
-<
