--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ Hey people! This is just a general website about my life and what's going on so.
    
    <div>Photo Edits
 
-    <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Stuff </a>  
+    <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Photo Edits </a>  
     </div>
     
    <div>Fandoms
-    <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Stuff </a>  
+    <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Contact Info </a>  
    </div>
  
  </div>
