--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML> 
 
 <title>Girls Who Code</title>
-<link rel="stylesheet" href="style.css">
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <h1>
   Mihika Rayan
