--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <body> 
-  <div class="nav">
+  <div class="navbar_horizontal">
     <div>
       <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> About Me 
       </a>
@@ -46,6 +46,7 @@
   </div>
 
   </div>
+  <img class = "floatLeft"
 </body>
 
 
