--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <body> 
   <div class="navbar_horizontal">
+     <div style= text-align: center;>
+
     <div>
       <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> About Me 
       </a>
