--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 
 <body> 
- 
-   <ul>
-    <li>
+  <div class= "nav">
+   
+    <div>
       <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> About Me 
       </a>
-    </li>
+    </div>
 
-    <li> 
+    <div> 
       <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> My Favs </a>  
       </h3>
-  </li>
+  </div>
 
   <li>
 
@@ -47,7 +47,9 @@
   </li>
 
   </ul>
+ </div>
   <img class = "floatLeft"
+  
 </body>
 
 
