--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
       </h3>
   </div>
 
-  <li>
+  <div>
 
     <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Photo Edits </a>  
-  </li>
+  </div>
 
-  <li>
+  <div>
     <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Contact Info </a>  
-  </li>
+  </div>
 
-  </ul>
+
  </div>
   <img class = "floatLeft"
   
