--- a/index.html
+++ b/index.html
@@ -6,46 +6,33 @@
 </head>
 
 <body> 
+<center>
   <div class= "nav">
    
-    <div>
+   
       <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> About Me 
       </a>
-    </div>
-
-    <div> 
+  
       <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> My Favs </a>  
-      </h3>
-  </div>
-
-  <div>
-
-    <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Photo Edits </a>  
-  </div>
-
-  <div>
-    <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Contact Info </a>  
-  </div>
-
-
+    
+      <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Photo Edits </a>  
+ 
+      <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Contact Info </a>  
+  
  </div>
   <img class = "floatLeft"
-  
-</body>
+  </center>
 
 <h1>
   Mihika Rayan
 </h1>
-
-<title>
-  GirlsWhoCode
-</title>
 
 
 <p>
   Hey people! This is just a general website about my life and what's going on so... enjoy! (hopefully)
 </p>
 
+</body>
 
 
 
