--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 <p>
   Hey people! This is just a general website about my life and what's going on so... enjoy! (hopefully)
 </p>
+  
+  <center><img src= http://pic.1fotonin.com/data/wallpapers/92/WDF_1359573.jpg"> </center>
+  
+
 
 </body>
 
