--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   Hey people! This is just a general website about my life and what's going on so... enjoy! (hopefully)
 </p>
   
-  <center><img src= http://pic.1fotonin.com/data/wallpapers/92/WDF_1359573.jpg"> </center>
+  <center><img src= http://pic.1fotonin.com/data/wallpapers/92/WDF_1359573.jpg" style= "width:746px;height:342px"> </center>
   
 
 
