--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
   <div class= "nav">
    
      <div>
-      <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> About Me 
-      </a>
+      <a href= "aboutMe.html"> About Me </a>
      </div>
   <div>
-      <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> My Favs </a>  
+      <a href= "myFavs.html"> My Favs </a>  
   </div>
    <div> 
-      <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Photo Edits </a>  
+      <a href= "photoEdits.html"> Photo Edits </a>  
 </div>
  <div>
-      <a href= "http://static.wixstatic.com/media/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg/v1/fill/w_980,h_650,al_c,q_85/e81bc4_104fd0d149cd40f6bbb2d7a7feac8d9a.jpg"> Contact Info </a>  
+      <a href= "contactInfo.html"> Contact Info </a>  
   </div>
     
  </div>
