--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <p>
   Hey people! This is just a general website about my life and what's going on so... enjoy! (hopefully)
 </p>
+<p>
+  I like a lot of things and could go on all day but some of the most important or fun are swimming, listening to music, watching cool t.v. series like Once Upon A Time, a LOT of books which I might put you to sleep with. I also have an annoying but pretty cool brother to keep me entertained!:)
+</p>
   
   <center> <img src= "http://pic.1fotonin.com/data/wallpapers/92/WDF_1359573.jpg" style= "width:600px;height:400px"> </center>
   
