--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
  </div>
   <img class = "floatLeft"
-  </center>
+  
 
 <h1>
   Mihika Rayan
@@ -38,7 +38,7 @@
   I like a lot of things and could go on all day, but some of the most important or fun things are swimming, listening to music, watching cool t.v. series like Once Upon A Time, a LOT of books which I might put you to sleep with. I also have an annoying but pretty cool brother to keep me entertained!:)
 </p>
   
-  <center> <img src= "http://www.baristtaflower.com/images/gallery/illustration2.jpg" style= "width:400px;height:400px"> </center>
+  </center> <img src= "http://www.baristtaflower.com/images/gallery/illustration2.jpg" style= "width:400px;height:400px"> </center>
   
 
 
