--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<link rel="stylesheet" type="text/css" href="css.aboutMe">
 <body>
 
 <img src = "http://65.media.tumblr.com/tumblr_m8ndags5kT1rqpwjoo1_500.jpg">
